# fimex

./: .gitignore  README.md  pyproject.toml
scripts/: dependency.sh  dev.sh  pypi.sh
